--- a/index.html
+++ b/index.html
@@ -12,8 +12,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>HELLO</h1>
-    <h2>H2</h2>
-    <h3>H3</h3>
+    <!-- Thẻ div chứa toàn bộ page của web -->
+    <div class="app"> 
+        <header class="header">
+            <nav class="header__navbar">
+                <ul class="header__navbar-list">
+                    <li class="header__navbar-item">Vào của hàng trên ứng dụng F8-Shop</li>
+                    <li class="header__navbar-item">Kết nối</li>
+                </ul>
+
+                <ul class="header__navbar-list">
+                    <li class="header__navbar-item">
+                        <a href="" class="header__navbar-item-link">Thông báo</a>
+                    </li>
+                    <li class="header__navbar-item">
+                        <a href="" class="header__navbar-item-link">Trợ giúp</a>
+                    </li>
+                    <li class="header__navbar-item">Đăng ký</li>
+                    <li class="header__navbar-item">Đăng nhập</li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="container">
+
+        </div>
+
+        <footer class="footer">
+
+        </footer>
+    </div>
 </body>
 </html>
