--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--separate">Vào của hàng trên ứng dụng F8-Shop</li>
+                        <li class="header__navbar-item header__navbar-item--separate">
+                            Vào của hàng trên ứng dụng F8-Shop
+                            <div class="header__qr">
+                                <img src="./assets/img/qr_code.png" alt="QR code" class="header__qr-img">
+                                <div class="header__qr-apps">
+                                    <img src="./assets/img/google_play.png" alt="Google Play" class="header_qr-download-img">
+                                    <img src="./assets/img/app_store.png" alt="App Store" class="header_qr-download-img">
+                                </div>
+                            </div>
+                        </li>
                         <li class="header__navbar-item">
                             <span class="header__navbar-title--no-pointer">Kết nối</span>
                             <a href="" class="header__navbar-icon-link">
