--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
                             <div class="header__qr">
                                 <img src="./assets/img/qr_code.png" alt="QR code" class="header__qr-img">
                                 <div class="header__qr-apps">
-                                    <img src="./assets/img/google_play.png" alt="Google Play" class="header_qr-download-img">
-                                    <img src="./assets/img/app_store.png" alt="App Store" class="header_qr-download-img">
+                                    <a href="" class="header__qr-link">
+                                        <img src="./assets/img/google_play.png" alt="Google Play" class="header_qr-download-img">
+                                    </a>
+                                    <a href="" class="header__qr-link">
+                                        <img src="./assets/img/app_store.png" alt="App Store" class="header_qr-download-img">
+                                    </a>
                                 </div>
                             </div>
                         </li>
