--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--separate">
+                        <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
                             Vào của hàng trên ứng dụng F8-Shop
                             <div class="header__qr">
                                 <img src="./assets/img/qr_code.png" alt="QR code" class="header__qr-img">
