--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +15,10 @@
     <link href="./assets/fonts/fontawesome-free-6.4.2-web/css/solid.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Thẻ div chứa toàn bộ page của web -->
-    <div class="app"> 
+    <div class="app">
         <header class="header">
             <div class="grid">
                 <nav class="header__navbar">
@@ -27,10 +29,12 @@
                                 <img src="./assets/img/qr_code.png" alt="QR code" class="header__qr-img">
                                 <div class="header__qr-apps">
                                     <a href="" class="header__qr-link">
-                                        <img src="./assets/img/google_play.png" alt="Google Play" class="header_qr-download-img">
+                                        <img src="./assets/img/google_play.png" alt="Google Play"
+                                            class="header_qr-download-img">
                                     </a>
                                     <a href="" class="header__qr-link">
-                                        <img src="./assets/img/app_store.png" alt="App Store" class="header_qr-download-img">
+                                        <img src="./assets/img/app_store.png" alt="App Store"
+                                            class="header_qr-download-img">
                                     </a>
                                 </div>
                             </div>
@@ -45,7 +49,7 @@
                             </a>
                         </li>
                     </ul>
-    
+
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link">
@@ -59,7 +63,8 @@
                                 Trợ giúp
                             </a>
                         </li>
-                        <li class="header__navbar-item header__navbar-item-strong header__navbar-item--separate">Đăng ký</li>
+                        <li class="header__navbar-item header__navbar-item-strong header__navbar-item--separate">Đăng ký
+                        </li>
                         <li class="header__navbar-item header__navbar-item-strong">Đăng nhập</li>
                     </ul>
                 </nav>
@@ -80,9 +85,9 @@
         <div class="modal__overlay"></div>
 
         <div class="modal__body">
-            <div class="modal__inner">
-                <!-- Authen form -->
-                <div class="auth-form">
+            <!-- Authen form -->
+            <div class="auth-form">
+                <div class="auth-form__container">
                     <div class="auth-form__header">
                         <h3 class="auth-form__heading">Đăng ký</h3>
                         <span class="auth-form__switch-btn">Đăng nhập</span>
@@ -102,9 +107,9 @@
 
                     <div class="auth-form__aside">
                         <p class="auth-form__policy-text">
-                            Bằng việc đăng ký, bạn đã đồng ý với Shoppe về 
-                            <a href="" class="auth-form__policy-link">Điều khoản dịch vụ</a> & 
-                            <a href="" class="auth-form__policy-link">Chính sách bảo mật</a>
+                            Bằng việc đăng ký, bạn đã đồng ý với Shop về
+                            <a href="" class="auth-form__text-link">Điều khoản dịch vụ</a> &
+                            <a href="" class="auth-form__text-link">Chính sách bảo mật</a>
                         </p>
                     </div>
 
@@ -128,4 +133,5 @@
         </div>
     </div>
 </body>
+
 </html>
