header search css ss2

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                             <span class="header__search-select-label">Trong shop</span>
                             <i class="header__search-select-icon fa-solid fa-angle-down"></i>
                         </div>
+                        <button class="header__search-btn">
+                            <i class="header__search-btn-icon fa-solid fa-magnifying-glass"></i>
+                        </button>
                     </div>
     
                     <div class="header__cart">
